--- a/LostAnimalsProject/LostAnimals/src/main/res/values/strings.xml
+++ b/LostAnimalsProject/LostAnimals/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     </string>
     <string name="hello_world" >Hello world!
     </string>
+    <string name="no_pets">Sorry, but no missing pets where found in your area. Please try again later.</string>
 
 </resources>
